--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,32 +1,62 @@
-<link rel="stylesheet" href="/css/style.css">
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md navbar-light bg-white border-bottom sticky-top shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/listings"><i class="fa-solid fa-house"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+    <!-- Brand -->
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-solid fa-house text-danger"></i>
+    </a>
+
+    <!-- Search (always visible, centered on desktop, full-width on mobile) -->
+    <% if (currentPath === '/listings') { %>
+      <form class="d-flex flex-grow-1 mx-2 my-2 my-md-0" role="search" style="max-width:600px;">
+        <input class="form-control me-2" id="searchInput" type="text" placeholder="Search Destinations" />
+        <button class="btn btn-danger" type="button">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form>
+    <% } %>
+
+    <!-- Desktop nav (md and up) -->
+    <div class="d-none d-md-flex ms-auto navbar-nav">
+      <a class="nav-link" href="/listings/new">List your Home</a>
+      <% if(!currUser){ %>
+        <a class="nav-link" href="/signup"><b>Signup</b></a>
+        <a class="nav-link" href="/login"><b>Login</b></a>
+      <% } %>
+      <% if(currUser){ %>
+        <a class="nav-link" href="/logout">Logout</a>
+      <% } %>
+    </div>
+
+    <!-- Mobile toggler -->
+    <button class="navbar-toggler d-md-none" type="button"
+            data-bs-toggle="offcanvas" data-bs-target="#mainMenu"
+            aria-controls="mainMenu" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/listings">Explore</a>
-      </div>
-      <div class="navbar-nav ms-auto">
-        <% if (currentPath === '/listings') { %>
-        <form class="d-flex" >
-        <input class="form-control me-2 search-input" id="searchInput" type="text" placeholder="Search Destinations"/>
-        <button class="btn search-btn" type="button" ><i class="fa-solid fa-magnifying-glass"></i>Search</button>
-      </form>
-       <% } %>
-      </div>
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new">List your Home</a>
-        <% if(!currUser){ %>
-        <a class="nav-link "  href="/signup"><b>Signup</b></a>
-        <a class="nav-link" href="/login"><b>Login</b></a>
-        <% } %>
-        <% if(currUser){ %>
-        <a class="nav-link" href="/logout">Logout</a>
-        <% } %>
-      </div>
-    </div>
   </div>
 </nav>
+
+<!-- Mobile offcanvas menu -->
+<div class="offcanvas offcanvas-end" tabindex="-1" id="mainMenu" aria-labelledby="mainMenuLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="mainMenuLabel">Menu</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <nav class="nav flex-column">
+      <a class="nav-link" href="/listings/new">List your Home</a>
+      <% if(!currUser){ %>
+        <a class="nav-link" href="/signup"><b>Signup</b></a>
+        <a class="nav-link" href="/login"><b>Login</b></a>
+      <% } %>
+      <% if(currUser){ %>
+        <a class="nav-link" href="/logout">Logout</a>
+      <% } %>
+    </nav>
+  </div>
+</div>
+
+
+<!-- Bootstrap JS (bundle includes Popper) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
