--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,10 +1,18 @@
 <footer>
     <div class="f-info">
         <div class="f-social-info">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.facebook.com/rizwankhan212" target="_blank">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/rizzygamer/?hl=en" target="_blank">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <a href="https://x.com/RizwanCoder212" target="_blank">
+                <i class="fa-brands fa-square-x-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/rizwan-khan-58059432b/" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
         </div>
         <div class="f-info-brand">&copy; WanderLust Private Limited</div>
         <div class="f-info-links">
