--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,6 +11,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.js"></script>
 <script src="/js/search.js"></script>
+<link rel="icon" type="image/svg+xml" href="/css/favicon.svg">
 </head>
 <body>
 
