--- a/views/listings/showList.ejs
+++ b/views/listings/showList.ejs
@@ -25,6 +25,9 @@
             <p>
                 <%= list.country %>
             </p>
+            <p>
+                <%= list.category %>
+            </p>
         </div>
 
         <% if(currUser && currUser._id.equals(list.owner._id)){ %>
